# quidditch-simulator

./: .gitignore  CMakeLists.txt  README.md  makeAll  runAllUnitTests
include/: Ball.hpp  Location.hpp  Player.hpp  PlayerInstance.hpp  QuidditchUtilities.hpp  QuidditchUtilityStructs.hpp  Team.hpp
src/: Ball.cpp  Player.cpp  PlayerData.cpp  PlayerInstance.cpp  Team.cpp  main.cpp
test/: BallTest.cpp  CMakeLists.txt  PlayerInstanceTest.cpp  PlayerTest.cpp  TeamTest.cpp  TestTemplate.cpp
